update github pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <title></title>
-    <!-- svelte app injected in main -->
-    <main></main>
-
-    <style>
-      /* open-sans-regular - latin */
-      @font-face {
-        font-family: "Open Sans";
-        font-style: normal;
-        font-weight: 400;
-        src: local("Open Sans Regular"), local("OpenSans-Regular"),
-          url("assets/open-sans-v17-latin-regular.woff2") format("woff2"),
-          /* Chrome 26+, Opera 23+, Firefox 39+ */
-            url("assets/open-sans-v17-latin-regular.woff") format("woff");
-        /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-      }
-
-      /* open-sans-600 - latin */
-      @font-face {
-        font-family: "Open Sans";
-        font-style: normal;
-        font-weight: 600;
-        src: local("Open Sans SemiBold"), local("OpenSans-SemiBold"),
-          url("assets/open-sans-v17-latin-600.woff2") format("woff2"),
-          /* Chrome 26+, Opera 23+, Firefox 39+ */
-            url("assets/open-sans-v17-latin-600.woff") format("woff");
-        /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-      }
-    </style>
-    <link rel="stylesheet" href="/assets/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
-
-    <script defer src="/build/bundle.js"></script>
+    <link rel="stylesheet" href="assets/global.css" />
+    <link rel="stylesheet" href="build/bundle.css" />
   </head>
 
-  <body></body>
+  <body>
+    <!-- svelte app injected in main -->
+    <main></main>
+    <script defer src="build/bundle.js"></script>
+  </body>
 </html>
